fixing more responsive layout issues

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -37,9 +37,13 @@ $mainSiteNavWidth: 272px;
     background: url("../assets/images/b-l.jpg") repeat-y top right;
   }
   #middle-panel {
-    border-right: 1px solid #cccccc;
+  border-right: 1px solid #cccccc;
+  .demo-section-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
-  #right-extra-panel {
+}  #right-extra-panel {
     background: url("../assets/images/b-r.jpg") repeat-y top left;
   }
   /* Thank you! https://css-tricks.com/snippets/css/make-pre-text-wrap/ */
